# xing_easy_apply_bot

./: .env.example  .gitignore  README.md  adesso.py  auto_run.py  config.py  gpt_resume_builder.py  join.py  main.py  prompts.py  pyproject.toml  readme.md  reply.py  resume.yaml  resume_buld_test.py  sitecustomize.py  styles.css  utils.py  xing.py
commands/: clean_job_list.py  collect_stat.py  migrate.py  xing_stats.py
core/: config.py  logger.py
scripts/: run_xing_tests.py  xing_e2e.py
services/gpt/: gpt_evaluator.py  gpt_resume_builder.py
services/scraping/: adesso.py  base_scraper.py  join.py  prompts.py  questions_answers_db.json  utils.py  xing_scraper.py
services/scraping/prompts/: prompt_certifications.txt  prompt_education.txt  prompt_skills.txt
services/utils/: file_manager.py
src/xingbot/: __init__.py  auto_run.py  browser.py  cli.py  csv_store.py  enums.py  logging.py  settings.py  stats.py
src/xingbot/gpt/: evaluator.py  gpt_resume_builder.py  prompts.py
src/xingbot/gpt/prompts/: prompt_achievements.txt  prompt_experience.txt  prompt_header.txt  prompt_profile.txt  prompt_side_projects.txt
src/xingbot/scraping/: adesso.py  base.py  join.py  xing_cards.py  xing_scraper.py
src/xingbot/utils/: human.py  text.py
src/xingbot/xing/: __init__.py  client.py  config.py  http.py
tests/e2e/: test_xing_e2e.py
tests/fixtures/: xing_search_cards.fixture.html
tests/integration/: test_xing_http_responses.py
tests/unit/: test_entrypoints.py  test_xing_cards.py  test_xing_client.py  test_xing_http.py  test_xing_scraper.py
