[project]
name = "xing-o1-02-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python =  ">=3.12,<4.0"
dependencies = [
    "annotated-types (>=0.7.0)",
    "anyio (>=4.8.0)",
    "beautifulsoup4 (>=4.13.3)",
    "brotli (>=1.1.0)",
    "build (>=1.3.0)",
    "cachecontrol (>=0.14.4)",
    "certifi (>=2025.1.31)",
    "cffi (>=1.17.1)",
    "charset-normalizer (>=3.4.1)",
    "cleo (>=2.1.0)",
    "colorama (>=0.4.6)",
    "crashtest (>=0.4.1)",
    "cssselect2 (>=0.7.0)",
    "deep-translator (>=1.11.4)",
    "distlib (>=0.4.0)",
    "distro (>=1.9.0)",
    "dulwich (>=0.24.10)",
    "fastjsonschema (>=2.21.2)",
    "filelock (>=3.20.0)",
    "findpython (>=0.7.1)",
    "fonttools (>=4.56.0)",
    "fpdf (>=1.7.2)",
    "greenlet (>=3.1.1)",
    "h11 (>=0.14.0)",
    "httpcore (>=1.0.7)",
    "httpx (>=0.28.1)",
    "idna (>=3.10)",
    "installer (>=0.7.0)",
    "jaraco-classes (>=3.4.0)",
    "jaraco-context (>=6.0.1)",
    "jaraco-functools (>=4.3.0)",
    "jiter (>=0.8.2)",
    "keyring (>=25.7.0)",
    "langdetect (>=1.0.9)",
    "loguru (>=0.7.3)",
    "more-itertools (>=10.8.0)",
    "mouseinfo (>=0.1.3)",
    "msgpack (>=1.1.2)",
    "nest-asyncio (>=1.6.0)",
    "numpy (>=2.2.3)",
    "openai (>=1.64.0)",
    "packaging (>=25.0)",
    "pandas (>=2.2.3)",
    "pbs-installer (>=2025.10.31)",
    "pillow (>=11.1.0)",
    "pkginfo (>=1.12.1.2)",
    "platformdirs (>=4.5.0)",
    "playwright (>=1.50.0)",
    "poetry (>=2.2.1)",
    "poetry-core (>=2.2.1)",
    "pyautogui (>=0.9.54)",
    "pycparser (>=2.22)",
    "pydantic (>=2.10.6)",
    "pydantic-core (>=2.27.2)",
    "pydyf (>=0.11.0)",
    "pyee (>=12.1.1)",
    "pygetwindow (>=0.0.9)",
    "pymsgbox (>=1.0.9)",
    "pyperclip (>=1.9.0)",
    "pyphen (>=0.17.2)",
    "pyproject-hooks (>=1.2.0)",
    "pyrect (>=0.2.0)",
    "pyscreeze (>=1.0.1)",
    "python-dateutil (>=2.9.0.post0)",
    "pytweening (>=1.2.0)",
    "pytz (>=2025.1)",
    "pywin32-ctypes (>=0.2.3)",
    "pyyaml (>=6.0.2)",
    "rapidfuzz (>=3.14.3)",
    "requests (>=2.32.3)",
    "requests-toolbelt (>=1.0.0)",
    "shellingham (>=1.5.4)",
    "six (>=1.17.0)",
    "sniffio (>=1.3.1)",
    "soupsieve (>=2.6)",
    "tinycss2 (>=1.4.0)",
    "tinyhtml5 (>=2.0.0)",
    "tomlkit (>=0.13.3)",
    "tqdm (>=4.67.1)",
    "trove-classifiers (>=2025.11.14.15)",
    "typing-extensions (>=4.12.2)",
    "tzdata (>=2025.1)",
    "urllib3 (>=2.3.0)",
    "virtualenv (>=20.35.4)",
    "weasyprint (>=64.1)",
    "webencodings (>=0.5.1)",
    "win32-setctime (>=1.2.0)",
    "zopfli (>=0.2.3.post1)",
    "zstandard (>=0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
